--- a/submission/manuscript.tex
+++ b/submission/manuscript.tex
@@ -147,9 +147,9 @@ Running title: DNA and protein isolation from macrophyte surfaces
 \subsection{Summary}\label{summary}}
 
 Studies of unculturable microbes often combine methods based on DNA,
-such as 16S rRNA sequencing and metagenomics, with methods that allow an
+such as 16S rRNA sequencing and metagenomics, with methods that allow
 insight into the metabolic status, such as metaproteomics. To apply
-these procedures to the microbial community inhabiting the surfaces of
+these techniques to the microbial community inhabiting the surfaces of
 marine macrophytes it is advisable to perform, prior to the analysis, a
 selective DNA and protein isolation so that the host material, present
 in higher quantities, is not hampering the analysis. Two protocols, for
@@ -160,15 +160,15 @@ macroalga \emph{Caulerpa cylindracea}. Protocols showed an almost
 complete removal of the epiphytic community regardless of the sampling
 season, station, settlement or host species. The obtained DNA was
 suitable for metagenomic and 16S rRNA sequencing, while isolated
-proteins could be identified by mass spectrometry showing that protocols
-can be used in 16S rRNA, metagenomic and metaproteomic analysis. Low
-presence of host DNA and proteins, observed in isolated samples,
-indicated a selective nature of protocols. Furthermore, the procedures
-are based on universally available laboratory chemicals making the
-protocols widely applicable. Taken together, the adapted protocols
-ensure an almost complete removal of the macrophyte epiphytic community,
-are selective for microbes inhabiting macrophyte surfaces and are
-providing DNA and proteins applicable in 16S rRNA sequencing,
+proteins could be identified by mass spectrometry, showing that
+protocols can be used in 16S rRNA, metagenomic and metaproteomic
+analysis. Low presence of host DNA and proteins, observed in isolated
+samples, indicated a selective nature of the protocols. Furthermore, the
+procedures are based on universally available laboratory chemicals
+making the protocols widely applicable. Taken together, the adapted
+protocols ensure an almost complete removal of the macrophyte epiphytic
+community, are selective for microbes inhabiting macrophyte surfaces and
+are providing DNA and proteins applicable in 16S rRNA sequencing,
 metagenomics and metaproteomics.
 
 \newpage
@@ -221,7 +221,7 @@ towards more abundant host DNA and proteins.
 An alternative to these procedures is a direct isolation of the targeted
 material by incubating macrophyte tissues in an extraction buffer. After
 the incubation, the undisrupted host tissue is removed and the isolation
-procedure continues omitting host material contaminations. To our
+procedure continues, omitting host material contaminations. To our
 knowledge the only procedure describing a direct and selective epiphytic
 DNA isolation from the surfaces of marine macrophytes was provided by
 Burke \emph{et al.} (2009). In contrast to previously described methods
@@ -251,25 +251,15 @@ and proteins for 16S rRNA sequencing, metagenomics and metaproteomics.
 \subsection{Results}\label{results}}
 
 To assess the removal efficiency of DNA and protein isolation procedures
-leaves and thalli were stained with SYBR Green I and examined under a
-confocal microscope before and after treatments were performed. To test
-the isolation protocols on different macrophyte species, DNA and
-proteins were isolated from the surfaces of two macrophytes, the
-seagrass \emph{C. nodosa} and the macroalga \emph{C. cylindracea}.
-\emph{C. nodosa} was sampled in a monospecific meadow (Bay of Saline)
-and \emph{C. cylindracea} invaded meadow (Bay of Funtana), while samples
-of \emph{C. cylindracea} originated from a monospecific settlement and a
-\emph{C. cylindracea} invaded \emph{C. nodosa} meadow in the Bay of
-Funtana. In addition, the sampling was performed in two contrasting
-seasons, in December 2017 and in June 2018, to test the impact of
-seasonal conditions on the removal efficiency. Procedures developed for
-DNA and protein isolation showed an almost complete removal of the
-surface community of both, \emph{C. nodosa} and \emph{C. cylindracea}.
-In addition, a similar removal efficiency was observed for communities
-sampled in December 2017 (\autoref{confocal_december}) and June 2018
-(\autoref{confocal_june}). Also, no effect of station, settlement or
-isolation procedure (DNA or protein) on the removal efficiency was
-observed (Figs. \ref{confocal_december} and \ref{confocal_june}).
+leaves and thalli were examined under a confocal microscope before and
+after treatments were performed. Developed procedures showed an almost
+complete removal of the surface community of both, \emph{C. nodosa} and
+\emph{C. cylindracea}. In addition, a similar removal efficiency was
+observed for communities sampled in contrasting seasons, December 2017
+(\autoref{confocal_december}) and June 2018 (\autoref{confocal_june}).
+Also, no effect of station, settlement or isolation procedure (DNA or
+protein) on the removal efficiency was observed (Figs.
+\ref{confocal_december} and \ref{confocal_june}).
 
 To evaluate if the obtained DNA is suitable to determine the microbial
 community structure an Illumina sequencing of the V4 16S rRNA region was
@@ -381,7 +371,7 @@ The study of marine macrophyte epiphytic communities using culture
 independent techniques, such as 16S rRNA analysis, metagenomics and
 metaproteomics, requires an initial step of biological material
 isolation. Methods that have been developed for selective isolation of
-epiphytic biological material could be divided into two groups: (i)
+epiphytic biological material can be divided into two groups: (i)
 procedures involving, prior to extraction, a cell detachment step such
 as shaking (Gross \emph{et al.}, 2003; Nõges \emph{et al.}, 2010),
 scraping (Uku \emph{et al.}, 2007) and ultrasonication (Weidner \emph{et
@@ -391,16 +381,14 @@ cells (Burke \emph{et al.}, 2009). Protocols that include a cell
 detachment procedure do not provide complete cell removal (Cai \emph{et
 al.}, 2014; Richter-Heitmann \emph{et al.}, 2016) and in the case of
 probe ultrasonication tissue disruption can also be observed
-(Richter-Heitmann \emph{et al.}, 2016). To avoid these problems a
-procedure for DNA isolation involving host tissue incubation in the
-extraction buffer and direct epiphytic cell lysis on the macrophyte
-surface was developed (Burke \emph{et al.}, 2009). Though providing an
-almost complete cell removal and selective DNA isolation this protocol
-uses in the extraction buffer a rapid multienzyme cleaner (3M) not
-available worldwide and without a known composition (Burke \emph{et
-al.}, 2009). To circumvent these problems we developed and tested two
-protocols for selective DNA and protein isolation from marine macrophyte
-epiphytic communities.
+(Richter-Heitmann \emph{et al.}, 2016). Though, host tissue incubation
+procedures provide an almost complete cell removal and selective
+isolation, existing protocols like the one developed for DNA isolation
+by Burke \emph{et al.} (2009) use in the extraction buffer a rapid
+multienzyme cleaner (3M) not available worldwide and without a known
+composition (Burke \emph{et al.}, 2009). To circumvent these problems we
+developed and tested two protocols for selective DNA and protein
+isolation from marine macrophyte epiphytic communities.
 
 To test if the developed DNA and protein isolation procedures could be
 applied on a variety of macrophyte species we selected \emph{C. nodosa}
@@ -473,27 +461,25 @@ of individual cells in \emph{C. cylindracea} could cause a leakage of
 genetic material into the extraction buffer causing an elevated presence
 of host sequences in metagenomic data.
 
-Metagenomic analysis reveals the potential metabolic capacity of
-microbial communities, while to obtain an insight into the metabolic
-status of uncultivated members, a metaproteomic approach is required
-(Saito \emph{et al.}, 2019). The applied protocol for epipyhtic protein
-isolation followed by a metaproteomic analysis identified between 14,219
-and 16,449 proteins that is higher than previously reported for
-e.g.~soils (Chourey \emph{et al.}, 2010; Hultman \emph{et al.}, 2015),
-seawater (Williams \emph{et al.}, 2012) and biofilms (Leary \emph{et
-al.}, 2014). The functional annotation of identified proteins into COG
-functional categories showed that the protein isolation procedure can be
-used to assess the metabolic status of the macrophyte epiphytic
-community (Leary \emph{et al.}, 2014). Similar to metagenomes, the
-number of identified proteins, including their abundances, associated
-with Streptophyta in \emph{C. nodosa} samples were low indicating that
-the procedure is selective for epiphytic cell proteins. In addition, a
-higher number of identified proteins, and especially their abundances,
-associated with Chlorophyta was observed in \emph{C. cylindracea}
-samples. The cause of this elevated presence of Chlorophyta associated
-proteins can be, as in the case of the DNA isolation procedure,
-explained by the absence of individual cells in this siphonous alga
-(Coneva and Chitwood, 2015).
+To obtain an insight into the metabolic status of uncultivated members,
+a metaproteomic approach is required (Saito \emph{et al.}, 2019). The
+applied protocol for epipyhtic protein isolation followed by a
+metaproteomic analysis identified between 14,219 and 16,449 proteins,
+which is higher than previously reported for e.g.~soils (Chourey
+\emph{et al.}, 2010; Hultman \emph{et al.}, 2015), seawater (Williams
+\emph{et al.}, 2012) and biofilms (Leary \emph{et al.}, 2014). The
+functional annotation of identified proteins into COG functional
+categories showed that the protein isolation procedure can be used to
+assess the metabolic status of the macrophyte epiphytic community (Leary
+\emph{et al.}, 2014). Similar to metagenomes, the number of identified
+proteins, including their abundances, associated with Streptophyta in
+\emph{C. nodosa} samples were low indicating that the procedure is
+selective for epiphytic cell proteins. In addition, a higher number of
+identified proteins, and especially their abundances, associated with
+Chlorophyta was observed in \emph{C. cylindracea} samples. The cause of
+this elevated presence of Chlorophyta associated proteins can be, as in
+the case of the DNA isolation procedure, explained by the absence of
+individual cells in this siphonous alga (Coneva and Chitwood, 2015).
 
 In conclusion, the developed protocols for DNA and protein isolation
 from macrophyte surfaces are providing an almost complete removal of the
@@ -518,7 +504,7 @@ the Bay of Saline (\ang{45;7;5} N, \ang{13;37;20} E) and in a \emph{C.
 nodosa} meadow invaded by \emph{C. cylindracea} in the proximity of the
 village of Funtana (Bay of Funtana; \ang{45;10;39} N, \ang{13;35;42} E).
 Thalli of \emph{C. cylindracea} were sampled in the same \emph{C.
-nodosa} invaded meadow in the Bay Funtana and on a locality of only
+nodosa} invaded meadow in the Bay of Funtana and on a locality of only
 \emph{C. cylindracea} located in the proximity of the invaded meadow.
 Leaves and thalli for 16S rRNA analysis, metagenomics and metaproteomics
 were collected in two contrasting seasons, on 4 December 2017 (16S rRNA
@@ -799,7 +785,7 @@ detection of SAR11 bacterioplankton. \emph{Aquat Microb Ecol}
 \textbf{75}: 129--137.
 
 \leavevmode\hypertarget{ref-Bengtsson2020}{}%
-Bengtsson, H. (2020) MatrixStats: Functions that apply to rows and
+Bengtsson, H. (2020) matrixStats: Functions that apply to rows and
 columns of matrices (and to vectors).
 
 \leavevmode\hypertarget{ref-Buchfink2015}{}%
@@ -859,10 +845,10 @@ seagrass microbiomes. \emph{Front Microbiol} \textbf{9}: 388.
 
 \leavevmode\hypertarget{ref-Cucio2018}{}%
 Cúcio, C., Overmars, L., Engelen, A.H., and Muyzer, G. (2018)
-Metagenomic Analysis Shows the Presence of Bacteria Related to
-Free-Living Forms of Sulfur-Oxidizing Chemolithoautotrophic Symbionts in
-the Rhizosphere of the Seagrass Zostera marina. \emph{Front Mar Sci}
-\textbf{5}:
+Metagenomic analysis shows the presence of bacteria related to
+free-living forms of sulfur-oxidizing chemolithoautotrophic symbionts in
+the rhizosphere of the seagrass \emph{Zostera marina}. \emph{Front Mar
+Sci} \textbf{5}: 171.
 
 \leavevmode\hypertarget{ref-Egan2013}{}%
 Egan, S., Harder, T., Burke, C., Steinberg, P., Kjelleberg, S., and
@@ -1016,8 +1002,8 @@ microbial communities: A crucial choice in rhizobiome research.
 
 \leavevmode\hypertarget{ref-Saito2019}{}%
 Saito, M.A., Bertrand, E.M., Duffy, M.E., Gaylord, D.A., Held, N.A.,
-Hervey, W.J., et al. (2019) Progress and Challenges in Ocean
-Metaproteomics and Proposed Best Practices for Data Sharing. \emph{J
+Hervey, W.J., et al. (2019) Progress and challenges in ocean
+metaproteomics and proposed best practices for data sharing. \emph{J
 Proteome Res} \textbf{18}: 1461--1476.
 
 \leavevmode\hypertarget{ref-Schloss2016}{}%
