--- a/submission/references.bib
+++ b/submission/references.bib
@@ -52,7 +52,7 @@
 }
 
 @software{Bengtsson2020,
-  title = {{{MatrixStats}}: Functions That Apply to Rows and Columns of Matrices (and to Vectors)},
+  title = {{{matrixStats}}: Functions That Apply to Rows and Columns of Matrices (and to Vectors)},
   author = {Bengtsson, Henrik},
   date = {2020},
   url = {https://CRAN.R-project.org/package=matrixStats},
@@ -221,11 +221,12 @@
 }
 
 @article{Cucio2018,
-  title = {Metagenomic {{Analysis Shows}} the {{Presence}} of {{Bacteria Related}} to {{Free}}-{{Living Forms}} of {{Sulfur}}-{{Oxidizing Chemolithoautotrophic Symbionts}} in the {{Rhizosphere}} of the {{Seagrass Zostera}} Marina},
+  title = {Metagenomic Analysis Shows the Presence of Bacteria Related to Free-Living Forms of Sulfur-Oxidizing Chemolithoautotrophic Symbionts in the Rhizosphere of the Seagrass {{{\emph{Zostera marina}}}}},
   author = {C\'ucio, Catarina and Overmars, Lex and Engelen, Aschwin H. and Muyzer, Gerard},
   date = {2018},
   journaltitle = {Front. Mar. Sci.},
   volume = {5},
+  pages = {171},
   publisher = {{Frontiers}},
   issn = {2296-7745},
   doi = {10.3389/fmars.2018.00171},
@@ -653,7 +654,7 @@
 }
 
 @article{Saito2019,
-  title = {Progress and {{Challenges}} in {{Ocean Metaproteomics}} and {{Proposed Best Practices}} for {{Data Sharing}}},
+  title = {Progress and Challenges in Ocean Metaproteomics and Proposed Best Practices for Data Sharing},
   author = {Saito, Mak A. and Bertrand, Erin M. and Duffy, Megan E. and Gaylord, David A. and Held, Noelle A. and Hervey, William Judson and Hettich, Robert L. and Jagtap, Pratik D. and Janech, Michael G. and Kinkade, Danie B. and Leary, Dagmar H. and McIlvin, Matthew R. and Moore, Eli K. and Morris, Robert M. and Neely, Benjamin A. and Nunn, Brook L. and Saunders, Jaclyn K. and Shepherd, Adam I. and Symmonds, Nicholas I. and Walsh, David A.},
   date = {2019-04-05},
   journaltitle = {J. Proteome Res.},
