--- a/submission/manuscript.Rmd
+++ b/submission/manuscript.Rmd
@@ -68,7 +68,7 @@ Running title: DNA and protein isolation from macrophyte surfaces
 \setlength\parindent{24pt}
 
 ## Summary
-Studies of unculturable microbes often combine methods based on DNA, such as 16S rRNA sequencing and metagenomics, with methods that allow an insight into the metabolic status, such as metaproteomics. To apply these procedures to the microbial community inhabiting the surfaces of marine macrophytes it is advisable to perform, prior to the analysis, a selective DNA and protein isolation so that the host material, present in higher quantities, is not hampering the analysis. Two protocols, for DNA and protein isolation, were adapted for selective extractions of DNA and proteins from epiphytic communities inhabiting the surfaces of two marine macrophytes: the seagrass *Cymodocea nodosa* and the macroalga *Caulerpa cylindracea*. Protocols showed an almost complete removal of the epiphytic community regardless of the sampling season, station, settlement or host species. The obtained DNA was suitable for metagenomic and 16S rRNA sequencing, while isolated proteins could be identified by mass spectrometry showing that protocols can be used in 16S rRNA, metagenomic and metaproteomic analysis. Low presence of host DNA and proteins, observed in isolated samples, indicated a selective nature of protocols. Furthermore, the procedures are based on universally available laboratory chemicals making the protocols widely applicable. Taken together, the adapted protocols ensure an almost complete removal of the macrophyte epiphytic community, are selective for microbes inhabiting macrophyte surfaces and are providing DNA and proteins applicable in 16S rRNA sequencing, metagenomics and metaproteomics.
+Studies of unculturable microbes often combine methods based on DNA, such as 16S rRNA sequencing and metagenomics, with methods that allow insight into the metabolic status, such as metaproteomics. To apply these techniques to the microbial community inhabiting the surfaces of marine macrophytes it is advisable to perform, prior to the analysis, a selective DNA and protein isolation so that the host material, present in higher quantities, is not hampering the analysis. Two protocols, for DNA and protein isolation, were adapted for selective extractions of DNA and proteins from epiphytic communities inhabiting the surfaces of two marine macrophytes: the seagrass *Cymodocea nodosa* and the macroalga *Caulerpa cylindracea*. Protocols showed an almost complete removal of the epiphytic community regardless of the sampling season, station, settlement or host species. The obtained DNA was suitable for metagenomic and 16S rRNA sequencing, while isolated proteins could be identified by mass spectrometry, showing that protocols can be used in 16S rRNA, metagenomic and metaproteomic analysis. Low presence of host DNA and proteins, observed in isolated samples, indicated a selective nature of the protocols. Furthermore, the procedures are based on universally available laboratory chemicals making the protocols widely applicable. Taken together, the adapted protocols ensure an almost complete removal of the macrophyte epiphytic community, are selective for microbes inhabiting macrophyte surfaces and are providing DNA and proteins applicable in 16S rRNA sequencing, metagenomics and metaproteomics.
 
 \newpage
 ## Introduction
@@ -76,7 +76,7 @@ Surfaces of marine macrophytes are inhabited by a diverse microbial community wh
 
 Biological material (i.e. proteins and DNA) from pelagic microbial communities is usually isolated by collecting cells onto filters and subsequently isolating the aimed compound [@Gilbert2009]. If a specific microbial size fraction is aimed sequential filtration is applied [@Massana1997; @Andersson2010]. In contrast, obtaining biological materials from microorganism inhabiting surfaces requires either a cell detachment procedure prior to isolation or the host material is coextracted together with the targeted material. Methods for separating microbial cells form the host include shaking of host tissue [@Gross2003; @Noges2010], scraping of macrophyte surfaces [@Uku2007] or the application of ultrasonication [@Weidner1996; @Cai2014]. It was shown that shaking alone is not sufficient to remove microbial cells, at least from plant root surfaces [@Richter-Heitmann2016]. Manual separation methods, such as scraping and brushing, are time consuming and subjective, as the detachment efficiency depends on host tissue and the person performing the procedure [@Cai2014]. Ultrasonication was proposed as an alternative method as it is providing better results in terms of detachment efficiency [@Cai2014; @Richter-Heitmann2016]. The downside of this procedure is that complete cell removal was still not obtained and tissue disruption was observed especially after the application of probe ultrasonication [@Richter-Heitmann2016]. An alternative to these cell detachment procedures is the isolation of targeted epiphytic compounds together with host materials [@Staufenberger2008; @Jiang2015]. This procedure can lead to problems in the following processing steps such as mitochondrial and chloroplast 16S rRNA sequence contaminations from the host [@Longford2007; @Staufenberger2008]. In addition, when performing metagenomics and metaproteomics host material can cause biased results towards more abundant host DNA and proteins.
 
-An alternative to these procedures is a direct isolation of the targeted material by incubating macrophyte tissues in an extraction buffer. After the incubation, the undisrupted host tissue is removed and the isolation procedure continues omitting host material contaminations. To our knowledge the only procedure describing a direct and selective epiphytic DNA isolation from the surfaces of marine macrophytes was provided by @Burke2009. In contrast to previously described methods this protocol enables an almost complete removal of the surface community and it was used for 16S rRNA gene clone library construction [@Burke2011a] and metagenome sequencing [@Burke2011]. This method, thought providing a selective isolation procedure, uses a rapid multienzyme cleaner (3M) that is not available worldwide and without a known composition [@Burke2009]. Also to our knowledge, no selective isolation protocol for proteins from epiphytic communities inhabiting marine macrophytes was established.
+An alternative to these procedures is a direct isolation of the targeted material by incubating macrophyte tissues in an extraction buffer. After the incubation, the undisrupted host tissue is removed and the isolation procedure continues, omitting host material contaminations. To our knowledge the only procedure describing a direct and selective epiphytic DNA isolation from the surfaces of marine macrophytes was provided by @Burke2009. In contrast to previously described methods this protocol enables an almost complete removal of the surface community and it was used for 16S rRNA gene clone library construction [@Burke2011a] and metagenome sequencing [@Burke2011]. This method, thought providing a selective isolation procedure, uses a rapid multienzyme cleaner (3M) that is not available worldwide and without a known composition [@Burke2009]. Also to our knowledge, no selective isolation protocol for proteins from epiphytic communities inhabiting marine macrophytes was established.
 
 In the present study, we adapted a protocol widely used for DNA isolation from filters [@Massana1997] and a protocol used for protein isolation from sediments [@Chourey2010; @Hultman2015] for selective extractions of DNA and proteins from epiphytic communities inhabiting the surfaces of two marine macrophytes: the seagrass *Cymodocea nodosa* and the macroalga *Caulerpa cylindracea*. In addition, we tested the removal efficiency of the protocol and the suitability of obtained DNA and proteins for 16S rRNA sequencing, metagenomics and metaproteomics.
 
@@ -514,7 +514,7 @@ metap_cog_chlorophyta <- metap_cog %>%
   summarize(mean = mean(abundance), sd = sd(abundance))
 ```
 
-To assess the removal efficiency of DNA and protein isolation procedures leaves and thalli were stained with SYBR Green I and examined under a confocal microscope before and after treatments were performed. To test the isolation protocols on different macrophyte species, DNA and proteins were isolated from the surfaces of two macrophytes, the seagrass *C. nodosa* and the macroalga *C. cylindracea*. *C. nodosa* was sampled in a monospecific meadow (Bay of Saline) and *C. cylindracea* invaded meadow (Bay of Funtana), while samples of *C. cylindracea* originated from a monospecific settlement and a *C. cylindracea* invaded *C. nodosa* meadow in the Bay of Funtana. In addition, the sampling was performed in two contrasting seasons, in December 2017 and in June 2018, to test the impact of seasonal conditions on the removal efficiency. Procedures developed for DNA and protein isolation showed an almost complete removal of the surface community of both, *C. nodosa* and *C. cylindracea*. In addition, a similar removal efficiency was observed for communities sampled in December 2017 (\autoref{confocal_december}) and June 2018 (\autoref{confocal_june}). Also, no effect of station, settlement or isolation procedure (DNA or protein) on the removal efficiency was observed (Figs. \ref{confocal_december} and \ref{confocal_june}).
+To assess the removal efficiency of DNA and protein isolation procedures leaves and thalli were examined under a confocal microscope before and after treatments were performed. Developed procedures showed an almost complete removal of the surface community of both, *C. nodosa* and *C. cylindracea*. In addition, a similar removal efficiency was observed for communities sampled in contrasting seasons, December 2017 (\autoref{confocal_december}) and June 2018 (\autoref{confocal_june}). Also, no effect of station, settlement or isolation procedure (DNA or protein) on the removal efficiency was observed (Figs. \ref{confocal_december} and \ref{confocal_june}).
 
 To evaluate if the obtained DNA is suitable to determine the microbial community structure an Illumina sequencing of the V4 16S rRNA region was performed. Sequencing yielded a total of `r number_sequences` sequences after quality curation and exclusion of eukaryotic, mitochondrial and no relative sequences. The number of sequences classified as chloroplast was `r number_chloroplast_sequences`. After excluding these sequences the total number of retrieved reads dropped to `r number_sequences_without_chloroplast`, ranging from `r min_max$min` to `r min_max$max` sequences per sample (\autoref{supp-nseq_notus}). Even when the highest sequencing effort was applied the rarefaction curves did not level off which is commonly observed in high-throughput 16S rRNA amplicon sequencing procedures (\autoref{supp-rarefaction}). Sequence clustering at a similarity level of 97 \si{\percent} yielded a total of `r no_otus` different OTUs. Taxonomic classification of reads allowed for a macrophyte associated epiphytic community determination that was mainly composed of: *Alphaproteobacteria* (`r filter(plot, taxon=="Alphaproteobacteria")$mean` ± `r filter(plot, taxon=="Alphaproteobacteria")$sd` \si{\percent}), *Bacteroidota* (`r filter(plot, taxon=="Bacteroidota")$mean` ± `r filter(plot, taxon=="Bacteroidota")$sd` \si{\percent}), *Gammaproteobacteria* (`r filter(plot, taxon=="Gammaproteobacteria")$mean` ± `r filter(plot, taxon=="Gammaproteobacteria")$sd` \si{\percent}), *Desulfobacterota* (`r filter(plot, taxon=="Desulfobacterota")$mean` ± `r filter(plot, taxon=="Desulfobacterota")$sd` \si{\percent}), *Cyanobacteria* (`r filter(plot, taxon=="Cyanobacteria")$mean` ± `r filter(plot, taxon=="Cyanobacteria")$sd` \si{\percent}) and *Planctomycetota* (`r filter(plot, taxon=="Planctomycetota")$mean` ± `r filter(plot, taxon=="Planctomycetota")$sd` \si{\percent}) (\autoref{community}).
 
@@ -525,7 +525,8 @@ To determine if the extracted DNA can be used for metagenomic sequencing four sa
 To evaluate if the procedure for protein extraction is suitable for metaproteomic analysis, obtained proteins were trypsin digested and sequenced using a mass spectrometer. Obtained MS/MS spectra were searched against a protein database from sequenced metagenomes. From `r format(min(metap_cog_num), big.mark=',')` to `r format(max(metap_cog_num), big.mark=',')` proteins were identified in isolated protein samples (\autoref{cog}b). In addition, successful identification of proteins allowed for an assessment of the relative contribution of each COG functional category to the total number of identified proteins (\autoref{cog}b). Functional categories containing the highest number of identified proteins were: `r metap_cog_relative$"COG Functional Category"[1]` (`r metap_cog_relative$Name[1]`), `r metap_cog_relative$"COG Functional Category"[2]` (`r metap_cog_relative$Name[2]`), `r metap_cog_relative$"COG Functional Category"[3]` (`r metap_cog_relative$Name[3]`), `r metap_cog_relative$"COG Functional Category"[4]` (`r metap_cog_relative$Name[4]`) and `r metap_cog_relative$"COG Functional Category"[5]` (`r metap_cog_relative$Name[5]`). Isolated proteins could derive from epiphytic organisms inhabiting the macrophyte surface or from macrophyte tissue underlying them. The contribution of proteins originating from host tissues was evaluated by identifying all the proteins predicted to belong to any taxonomic group within the phyla Streptophyta and Chlorophyta and by calculating their contribution to the number and abundance of all identified proteins. On average, proteins isolated from the surface of *C. nodosa* contained `r filter(metap_cog_streptophyta, cog_abundance=="cog" & host=="Cy")$mean`  ± `r filter(metap_cog_streptophyta, cog_abundance=="cog" & host=="Cy")$sd` \si{\percent} of proteins associated with Streptophyta, contributing to `r filter(metap_cog_streptophyta, cog_abundance=="abundance" & host=="Cy")$mean`  ± `r filter(metap_cog_streptophyta, cog_abundance=="abundance" & host=="Cy")$sd` \si{\percent} of total proteins. Similar to metagenomes, proteins associated with Chlorophyta contributed more to *C. cylindracea* than proteins associated with Streptophyta to *C. nodosa*. Chlorophyta associated proteins comprised `r filter(metap_cog_chlorophyta, cog_abundance=="cog" & host=="Ca")$mean`  ± `r filter(metap_cog_chlorophyta, cog_abundance=="cog" & host=="Ca")$sd` \si{\percent} of all identified proteins in *C. cylindracea*, contributing to `r filter(metap_cog_chlorophyta, cog_abundance=="abundance" & host=="Ca")$mean`  ± `r filter(metap_cog_chlorophyta, cog_abundance=="abundance" & host=="Ca")$sd` \si{\percent} of all protein abundances.
 
 ## Discussion
-The study of marine macrophyte epiphytic communities using culture independent techniques, such as 16S rRNA analysis, metagenomics and metaproteomics, requires an initial step of biological material isolation. Methods that have been developed for selective isolation of epiphytic biological material could be divided into two groups: (i) procedures involving, prior to extraction, a cell detachment step such as shaking [@Gross2003; @Noges2010], scraping [@Uku2007] and ultrasonication [@Weidner1996; @Cai2014] and (ii) procedures involving a host tissue incubation aiming at direct lysis of epiphytic microbial cells [@Burke2009]. Protocols that include a cell detachment procedure do not provide complete cell removal [@Richter-Heitmann2016; @Cai2014] and in the case of probe ultrasonication tissue disruption can also be observed [@Richter-Heitmann2016]. To avoid these problems a procedure for DNA isolation involving host tissue incubation in the extraction buffer and direct epiphytic cell lysis on the macrophyte surface was developed [@Burke2009]. Though providing an almost complete cell removal and selective DNA isolation this protocol uses in the extraction buffer a rapid multienzyme cleaner (3M) not available worldwide and without a known composition [@Burke2009]. To circumvent these problems we developed and tested two protocols for selective DNA and protein isolation from marine macrophyte epiphytic communities.
+The study of marine macrophyte epiphytic communities using culture independent techniques, such as 16S rRNA analysis, metagenomics and metaproteomics, requires an initial step of biological material isolation. Methods that have been developed for selective isolation of epiphytic biological material can be divided into two groups: (i) procedures involving, prior to extraction, a cell detachment step such as shaking [@Gross2003; @Noges2010], scraping [@Uku2007] and ultrasonication [@Weidner1996; @Cai2014] and (ii) procedures involving a host tissue incubation aiming at direct lysis of epiphytic microbial cells [@Burke2009]. Protocols that include a cell detachment procedure do not provide complete cell removal [@Richter-Heitmann2016; @Cai2014] and in the case of probe ultrasonication tissue disruption can also be observed [@Richter-Heitmann2016]. 
+Though, host tissue incubation procedures provide an almost complete cell removal and selective isolation, existing protocols like the one developed for DNA isolation by @Burke2009 use in the extraction buffer a rapid multienzyme cleaner (3M) not available worldwide and without a known composition [@Burke2009]. To circumvent these problems we developed and tested two protocols for selective DNA and protein isolation from marine macrophyte epiphytic communities.
 
 To test if the developed DNA and protein isolation procedures could be applied on a variety of macrophyte species we selected *C. nodosa* and *C. cylindracea* as representatives of seagrass and macroalgal species, on which the procedures were tested. These species especially differ morphologically. While *C. nodosa* leaves are flat, *C. cylindracea* thallus is composed of uneven surfaces [@Kuo2001; @Verlaque2003]. The developed procedures showed an almost complete removal of epiphytic cells from the surfaces of both species comparable to the result of @Burke2009 and indicating that structural differences do not impact the removal efficiency. In addition, isolation protocols were tested in two contrasting season as it is known that macrophytes are harboring more algal epiphytes during autumn and winter [@Reyes2001]. No differences in the removal efficiency was observed between seasons suggesting that protocols can be used on macrophyte samples retrieved throughout the year. Also, no removal differences were observed on samples derived from the same host but from different localities or settlements demonstrating the stability of the protocol in cell removal efficiency.
 
@@ -533,14 +534,14 @@ Successful amplification and sequencing of the V4 16S rRNA gene region proved th
 
 Beside 16S rRNA sequencing high quality DNA is needed for metagenomics. The obtained number of metagenomic sequences and assembly statistics were comparable to metagenomes and metatranscriptomes derived from similar surface associated communities [@Crump2018; @Cucio2018]. In addition, functional annotation of predicted coding sequences to COG functional categories showed that the obtained metagenomes can be used to determine the metabolic capacity of surface associated communities [@Cucio2018; @Leary2014]. The proportion of coding sequences, including their RPKM, originating from *C. nodosa* metagenomes and classified as Streptophyta was low indicating a good selectivity of the isolation procedure towards epiphytic cells. In the case of DNA samples isolated from the surface of *C. cylindracea* the proportion of Chlorophyta coding sequences was also low but their RPKM was higher than in the case of *C. nodosa*. One of the causes for this elevated RPKM of Chlorophyta sequences in *C. cylindracea* could lay in tissue structure differences between these two host species. While *C. nodosa* leaves are composed of individual cells, the thallus of *C. cylindracea* is, like in other siphonous algal species, composed of a single large multinucleate cell [@Coneva2015]. The absence of individual cells in *C. cylindracea* could cause a leakage of genetic material into the extraction buffer causing an elevated presence of host sequences in metagenomic data.
 
-Metagenomic analysis reveals the potential metabolic capacity of microbial communities, while to obtain an insight into the metabolic status of uncultivated members, a metaproteomic approach is required [@Saito2019]. The applied protocol for epipyhtic protein isolation followed by a metaproteomic analysis identified between `r format(min(metap_cog_num), big.mark=',')` and `r format(max(metap_cog_num), big.mark=',')` proteins that is higher than previously reported for e.g. soils [@Chourey2010; @Hultman2015], seawater [@Williams2012] and biofilms [@Leary2014]. The functional annotation of identified proteins into COG functional categories showed that the protein isolation procedure can be used to assess the metabolic status of the macrophyte epiphytic community [@Leary2014]. Similar to metagenomes, the number of identified proteins, including their abundances, associated with Streptophyta in *C. nodosa* samples were low indicating that the procedure is selective for epiphytic cell proteins. In addition, a higher number of identified proteins, and especially their abundances, associated with Chlorophyta was observed in *C. cylindracea* samples. The cause of this elevated presence of Chlorophyta associated proteins can be, as in the case of the DNA isolation procedure, explained by the absence of individual cells in this siphonous alga [@Coneva2015].
+To obtain an insight into the metabolic status of uncultivated members, a metaproteomic approach is required [@Saito2019]. The applied protocol for epipyhtic protein isolation followed by a metaproteomic analysis identified between `r format(min(metap_cog_num), big.mark=',')` and `r format(max(metap_cog_num), big.mark=',')` proteins, which is higher than previously reported for e.g. soils [@Chourey2010; @Hultman2015], seawater [@Williams2012] and biofilms [@Leary2014]. The functional annotation of identified proteins into COG functional categories showed that the protein isolation procedure can be used to assess the metabolic status of the macrophyte epiphytic community [@Leary2014]. Similar to metagenomes, the number of identified proteins, including their abundances, associated with Streptophyta in *C. nodosa* samples were low indicating that the procedure is selective for epiphytic cell proteins. In addition, a higher number of identified proteins, and especially their abundances, associated with Chlorophyta was observed in *C. cylindracea* samples. The cause of this elevated presence of Chlorophyta associated proteins can be, as in the case of the DNA isolation procedure, explained by the absence of individual cells in this siphonous alga [@Coneva2015].
 
 In conclusion, the developed protocols for DNA and protein isolation from macrophyte surfaces are providing an almost complete removal of the epiphytic community and are shown to ensure removal from both, *C. nodosa* and *C. cylindracea*, in different seasons. Also, the obtained DNA and proteins are suitable for 16S rRNA sequencing, metagenomics and metaproteomics, while the obtained material contains low quantities of host DNA or proteins making the procedures epiphyte selective. Furthermore, the procedures are based on universally available laboratory chemicals making the protocols widely applicable.
 
 \newpage
 ## Experimental procedures
 ### Sampling
-Leaves of *C. nodosa* were sampled in a *C. nodosa* meadow in the Bay of Saline (\ang{45;7;5} N, \ang{13;37;20} E) and in a *C. nodosa* meadow invaded by *C. cylindracea* in the proximity of the village of Funtana (Bay of Funtana; \ang{45;10;39} N, \ang{13;35;42} E). Thalli of *C. cylindracea* were sampled in the same *C. nodosa* invaded meadow in the Bay Funtana and on a locality of only *C. cylindracea* located in the proximity of the invaded meadow. Leaves and thalli for 16S rRNA analysis, metagenomics and metaproteomics were collected in two contrasting seasons, on 4 December 2017 (16S rRNA analysis and metaproteomics), 14 December 2017 (metagenomics) and 18 June 2018 (16S rRNA analysis, metagenomics and metaproteomics). During spring 2018 the *C. nodosa* meadow in the Bay of Saline decayed to an extent that no leaves could be retrieved [@Najdek2020]. In addition, as not enough DNA for both metagenomic and 16S RNA analysis were obtained during the sampling on 4 December 2017, an additional sampling on 14 December 2017 was carried out in the Bay of Funtana. Leaves and thalli were collected by diving and transported to the laboratory in containers placed on ice and filled with site seawater. Upon arrival to the laboratory, *C. nodosa* leaves were cut into sections of 1 -- 2 \si{\cm}, while *C. cylindracea* thalli were cut into 5 -- 8 \si{\cm} long sections. Leaves and thalli were washed three times with sterile artificial seawater (ASW) to remove loosely attached microbial cells.
+Leaves of *C. nodosa* were sampled in a *C. nodosa* meadow in the Bay of Saline (\ang{45;7;5} N, \ang{13;37;20} E) and in a *C. nodosa* meadow invaded by *C. cylindracea* in the proximity of the village of Funtana (Bay of Funtana; \ang{45;10;39} N, \ang{13;35;42} E). Thalli of *C. cylindracea* were sampled in the same *C. nodosa* invaded meadow in the Bay of Funtana and on a locality of only *C. cylindracea* located in the proximity of the invaded meadow. Leaves and thalli for 16S rRNA analysis, metagenomics and metaproteomics were collected in two contrasting seasons, on 4 December 2017 (16S rRNA analysis and metaproteomics), 14 December 2017 (metagenomics) and 18 June 2018 (16S rRNA analysis, metagenomics and metaproteomics). During spring 2018 the *C. nodosa* meadow in the Bay of Saline decayed to an extent that no leaves could be retrieved [@Najdek2020]. In addition, as not enough DNA for both metagenomic and 16S RNA analysis were obtained during the sampling on 4 December 2017, an additional sampling on 14 December 2017 was carried out in the Bay of Funtana. Leaves and thalli were collected by diving and transported to the laboratory in containers placed on ice and filled with site seawater. Upon arrival to the laboratory, *C. nodosa* leaves were cut into sections of 1 -- 2 \si{\cm}, while *C. cylindracea* thalli were cut into 5 -- 8 \si{\cm} long sections. Leaves and thalli were washed three times with sterile artificial seawater (ASW) to remove loosely attached microbial cells.
 
 ### DNA isolation
 The DNA was isolated according to the protocol for isolation from filters described in @Massana1997. This protocol was modified and adapted for microbial DNA isolation from macrophyte surfaces as described below. 5 \si{\ml} of lysis buffer (40 \si{\milli\Molar} EDTA, 50 \si{\milli\Molar} Tris-HCl, 0.75 \si{\Molar} sucrose; pH 8.3) was added to 1 \si{\g} wet weight of leaves or 2 \si{\g} wet-weight of thalli. For every sample duplicate isolations were performed. Lysozyme was added (final concentration 1 \si{\mg\per\ml}) and the mixture was incubated at 37 \si{\degreeCelsius} for 30 \si{\minute}. Subsequently, proteinase K (final concentration 0.5 \si{\mg\per\ml}) and SDS (final concentration 1 \si{\percent}) were added and the samples were incubated at 55 \si{\degreeCelsius} for 2 \si{\hour}. Following the incubation, tubes were vortexed for 10 \si{\minute} and the mixture containing lyzed epiphytic cells was separated from host leaves or thalli by transferring the solution into a clean tube. The lysate was extracted twice with a mixture of phenol:chloroform:isoamyl alcohol (25:24:1; pH 8) and once with chloroform:isoamyl alcohol (24:1). After each organic solvent mixture addition tubes were slightly vortexed and centrifuged at 4,500 × g for 10 \si{\minute}. Following each centrifugation aqueous phases were retrieved. After the final extraction 1/10 of chilled 3 \si{\Molar} sodium acetate (pH 5.2) was added. DNA was precipitated by adding 1 volume of chilled isopropanol, incubating the mixtures overnight at \num{-20} °C and centrifuging at 16,000 × g and 4 \si{\degreeCelsius} for 20 \si{\minute}. The pellet was washed twice with 1 \si{\ml} of chilled 70 \si{\percent} ethanol and centrifuged after each washing step at 20,000 × g and 4 \si{\degreeCelsius} for 10 \si{\minute}. After the first washing step duplicate pellets form the same sample were pooled and transferred to a clean 1.5 \si{\ml} tube. The dried pellet was resuspended in 100 \si{\ul} of deionized water.
