--- a/submission/supplementary.tex
+++ b/submission/supplementary.tex
@@ -170,7 +170,7 @@ Running title: DNA and protein isolation from macrophyte surfaces
 
 }
 
-\caption{Rarefaction curves of bacterial and archaeal communities from the surfaces of macrophytes sampled in the Bay of Saline (\textit{C. nodosa} [Monospecific Settlement]) and the Bay of Funatana (\textit{C. nodosa} [Mixed Settlement] and \textit{C. cylindracea} [Mixed and Monospecific Settlement]) in two contrasting seasons.\label{rarefaction}}\label{fig:unnamed-chunk-1}
+\caption{Rarefaction curves of bacterial and archaeal communities from the surfaces of two marine macrophytes (\textit{C. nodosa} and \textit{C. cylindracea}) sampled in the Bay of Saline and the Bay of Funtana (Mixed and Monospecific Settlements) in two contrasting seasons (4 December 2017 and 19 June 2018).\label{rarefaction}}\label{fig:unnamed-chunk-1}
 \end{figure}
 
 \newpage
