--- a/submission/supplementary.tex
+++ b/submission/supplementary.tex
@@ -252,7 +252,7 @@ Phylum & No. of CDS & CDS (\%) & Summed RPKM & RPKM (\%)\\
 \bottomrule
 \endlastfoot
 \addlinespace[0.6 em]
-\multicolumn{5}{l}{\textbf{Funtana, \textit{Cymodocea nodosa} (Monospecific), 14 December 2017 (sample ID: 45)}}\\
+\multicolumn{5}{l}{\textbf{Funtana, \textit{Cymodocea nodosa} (Mixed), 14 December 2017 (sample ID: 45)}}\\
 \hspace{1em}\textit{Proteobacteria} & 4,021,486 & 57.08 & 526,874.683 & 56.71\\
 \hspace{1em}\textit{Cyanobacteria} & 459,942 & 6.53 & 155,294.303 & 16.72\\
 \hspace{1em}\textit{Bacteroidetes} & 1,388,758 & 19.71 & 116,972.727 & 12.59\\
